@@ -1,3 +1,9 @@
+2009-04-29  Bastien Nocera  <hadess@hadess.net>
+
+	* src/backend/video-utils.c
+	(totem_gdk_window_set_invisible_cursor): Use
+	GDK_CURSOR_BLANK as available in newer GTK+
+
 2009-04-24  Bastien Nocera  <hadess@hadess.net>
 
 	* src/totem-uri.c (totem_add_subtitle):
